# unindo_csv

./: .gitignore  pyproject.toml
data_in/: BARRA DO TURVO.csv  BERTIOGA.csv  CAJATI.csv  CANANEIA.csv  CUBATAO.csv  ELDORADO.csv  GUARUJA.csv  IGUAPE.csv  ILHA COMPRIDA.csv  IPORANGA.csv  ITANHAEM.csv  ITARIRI.csv  JUQUIA.csv  MIRACATU.csv  MONGAGUA.csv  PERUIBE.csv  PRAIA GRRANDE.csv  REGISTRO.csv  SANTOS.csv  SAO VICENTE.csv
data_out/: arquivo_final.csv
unindo_csv/: script.py  trocar_extensao.py
