[tool.poetry]
name = "unindo-csv"
version = "0.1.0"
description = ""
authors = ["renato-campos <renato.gomes.campos@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
